--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -98,12 +98,13 @@ body {
     top: 100px;   
 }
 
-#txEthData pre {
+#transaction-tx-data {
     white-space: pre-wrap;       /* Since CSS 2.1 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    text-transform: uppercase;
 }
 
 .poka-hz {
