--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -35,13 +35,21 @@ body {
 .content-page h3 {
     padding-left: 20px;
     padding-top: 12px;
+	margin-bottom: 0;
 }
 
 .content-page .block {
-    background-color: white;
+    background-color: black;
     /*padding: 20px;*/
     border-radius: 8px;
     margin-top: 20px;
+}
+
+.content-page .block-header {
+	padding-bottom: 10px;
+	background-color:white;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
 }
 
 .content-page table td {
