--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -96,7 +96,6 @@ tr.odd {
 #loader {
     margin-top: 40px;
     padding: 40px;
-    background-color: white;
     width: 300px;
     height: 300px;
     border-radius: 150px;
@@ -104,66 +103,13 @@ tr.odd {
     margin-right: auto;
 }
 
-#loader .fa {
-    margin-top: 40px;
-    margin-left: -30px;
-    font-size: 60px;
-    position: absolute;
-    -webkit-animation: kroot 2s linear infinite;
-       -moz-animation: kroot 2s linear infinite;
-         -o-animation: kroot 2s linear infinite;
-            animation: kroot 2s linear infinite;
-}
-
-@-webkit-keyframes kroot {
-    from { -webkit-transform: rotate(0deg) translateX(20px) rotate(0deg); }
-    to   { -webkit-transform: rotate(360deg) translateX(20px) rotate(-360deg); }
-}
-
-@-moz-keyframes kroot {
-    from { -moz-transform: rotate(0deg) translateX(20px) rotate(0deg); }
-    to   { -moz-transform: rotate(360deg) translateX(20px) rotate(-360deg); }
-}
-
-@-o-keyframes kroot {
-    from { -o-transform: rotate(0deg) translateX(20px) rotate(0deg); }
-    to   { -o-transform: rotate(360deg) translateX(20px) rotate(-360deg); }
-}
-
-@keyframes kroot {
-    from { transform: rotate(0deg) translateX(20px) rotate(0deg); }
-    to   { transform: rotate(360deg) translateX(20px) rotate(-360deg); }
-}
-
-#loader #scroller {
-    width:300px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 50px;
-    position: relative;
-    overflow: hidden;
-    top: 90px;
-    left: -40px;   
-}
-#scroller .letter {
-    font-family: sans-serif;
-    font-size: 12px;
-    font-weight: bold;
-    position: absolute;
-    top: -100px; 
-    left: -100px;
-}
-
 #loader #searchInProgressText {
     font-size: 24px;
     position: relative;
     top: -40px;
+    color: white;
 }
 
-#loader #pleaseWaitText {
-    position: relative;
-    top: 100px;   
-}
 #transaction-tx-parsed,
 #transaction-tx-data {
     white-space: pre-wrap;       /* Since CSS 2.1 */
@@ -322,4 +268,71 @@ td.list-field {
 
 .table tr.last td:last-child {
     border-bottom-right-radius: 8px;
+}
+
+/* Timer*/
+.timer{
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    box-shadow: inset 0px 0px 0px 2px #fff;
+    border-radius: 50%;
+    position: relative;
+    margin: 38px auto;/* Not necessary- its only for layouting*/    
+ }
+.timer:after, .timer:before{
+    position: absolute;
+    content:"";
+    background-color: #fff;
+}
+.timer:after{
+    width: 10px;
+    height: 2px;
+    top: 11px;
+    left: 11px;
+    -webkit-transform-origin: 1px 1px;
+       -moz-transform-origin: 1px 1px;
+            transform-origin: 1px 1px;
+    -webkit-animation: minhand 2s linear infinite;
+       -moz-animation: minhand 2s linear infinite;
+            animation: minhand 2s linear infinite;
+}
+
+.timer:before{
+    width: 8px;
+    height: 2px;
+    top: 11px;
+    left: 11px;
+    -webkit-transform-origin: 1px 1px;
+       -moz-transform-origin: 1px 1px;
+            transform-origin: 1px 1px;
+    -webkit-animation: hrhand 8s linear infinite;
+       -moz-animation: hrhand 8s linear infinite;
+            animation: hrhand 8s linear infinite;
+}
+
+@-webkit-keyframes minhand{
+    0%{-webkit-transform:rotate(0deg)}
+    100%{-webkit-transform:rotate(360deg)}
+}
+@-moz-keyframes minhand{
+    0%{-moz-transform:rotate(0deg)}
+    100%{-moz-transform:rotate(360deg)}
+}
+@keyframes minhand{
+    0%{transform:rotate(0deg)}
+    100%{transform:rotate(360deg)}
+}
+
+@-webkit-keyframes hrhand{
+    0%{-webkit-transform:rotate(0deg)}
+    100%{-webkit-transform:rotate(360deg)}
+}
+@-moz-keyframes hrhand{
+    0%{-moz-transform:rotate(0deg)}
+    100%{-moz-transform:rotate(360deg)}
+}
+@keyframes hrhand{
+    0%{transform:rotate(0deg)}
+    100%{transform:rotate(360deg)}
 }
