--- a/css/tilda-custom.css
+++ b/css/tilda-custom.css
@@ -1,16 +1,3 @@
-media screen and (max-width: 400px) {
-  .t415__number {
-    font-size: 24px;
-  }
-}
-
-@media screen and (min-width: 640px) and (max-width: 1200px) {
-    .t269__title {
-        margin-top: 40px;
-    }
-}
-
-
 a, a:hover, a:visited {
     text-decoration: underline !important;
     color: white !important;
@@ -23,4 +10,37 @@ a.external, a.external:hover, a.external:visited {
 
 a.t-btn {
    color: black !important;
+}
+
+.disclaimer {
+    font-size: 22px;
+}
+
+@media screen and (min-width: 640px) and (max-width: 1200px) {
+    
+    .disclaimer {
+        font-size: 18px;
+    }
+    
+    .t269__title {
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 639px) {
+    .disclaimer {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+  .t415__number {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 980px){
+    .t454__maincontainer {
+        padding: 0 !important;
+    }
 }
