Widget css fixes

--- a/api/widget.css
+++ b/api/widget.css
@@ -39,6 +39,7 @@
 }
 .tx-token {
     min-width: 32px;
+    max-width: 60px;
 }
 .txs.small .tx-send, .txs.small .tx-date {
     padding-top: 5px;
@@ -66,19 +67,16 @@ a.tx-link, a.tx-link:visited, a.tx-link:hover {
 .txs.small .tx-link {
     max-width: 140px;
 }
-.tx-hash a.tx-link, .tx-hash a.tx-link:visited, .tx-hash a.tx-link:hover {
-    color: #47C2FF !important;
-    display: inline-block;
-    max-width: 80px;
-    overflow: hidden;
-    text-overflow: ellipsis !important;
-}
 a.tx-link, a.tx-link:visited {
    text-decoration: none !important;
 }
 a.tx-link:hover {
    text-decoration: underline !important;
 }
+.tx-token a.tx-link, .tx-token a.tx-link:visited, .tx-token a.tx-link:hover  {
+    max-width: 70px;
+}
+
 .tx-amount {
     text-align: right !important;    
 }
@@ -119,9 +117,20 @@ a.tx-link:hover {
     transform: none;
     transition: all 1s cubic-bezier(.36,-0.64,.34,1.76);
 }
+@media screen and (min-width: 999px) {
+    .tx-token {
+        max-width: 160px;
+    }
+    .tx-token a.tx-link, .tx-token a.tx-link:visited, .tx-token a.tx-link:hover  {
+        max-width: 150px;
+    }
+}
 @media screen and (max-width: 680px) {
+    .txs.small .tx-link {
+        max-width: 180px;
+    }    
     .widget-txs {
-        max-width: 480px;
+        max-width: 360px;
     }
     .txs {
         display: none;
@@ -130,3 +139,8 @@ a.tx-link:hover {
         display: table;
     }
 }
+@media screen and (max-width: 360px) {
+    .txs.small .tx-link {
+        max-width: 140px;
+    }    
+}    
