--- a/api/widget.css
+++ b/api/widget.css
@@ -8,6 +8,7 @@
     padding: 5px;
     color: white;
     font-size: 1.3em;
+    position:relative;
 }
 .txs-loading {
     margin-top: 16px;
@@ -76,7 +77,6 @@ a.tx-link:hover {
 .tx-token a.tx-link, .tx-token a.tx-link:visited, .tx-token a.tx-link:hover  {
     max-width: 70px;
 }
-
 .tx-amount {
     text-align: right !important;    
 }
@@ -117,6 +117,25 @@ a.tx-link:hover {
     transform: none;
     transition: all 1s cubic-bezier(.36,-0.64,.34,1.76);
 }
+.txs-debug {
+    position: absolute;
+    right: 5px;
+    top: 0px;
+}
+.txs-debug div {
+    cursor: pointer;
+    width: 32px;
+    text-align: center;
+    opacity: 0.5;
+    float:left;
+}
+.txs-add {
+    color: #0099ff;
+}
+.txs-debug div:hover {
+    opacity: 1; 
+}
+
 @media screen and (min-width: 999px) {
     .tx-token {
         max-width: 160px;
