Token update link

--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -367,6 +367,16 @@ small {
     display: none;
 }
 
+.token-name a.token-update, 
+.address-token-name a.token-update {
+    position: absolute;
+    right: 0px;
+    margin-right: 30px;
+    font-size: 14px;
+    top: 37px;   
+    color: #337ab7 !important;
+}
+
 @media screen and (max-width: 767px) {
     
     #address-token-transfers .block {
