--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -340,7 +340,7 @@ a.dashed {
 }
 
 #address-issuances tr td:last-child {
-    min-width: 150px;
+    min-width: 200px;
 }
 
 .tx-details-link {
@@ -484,6 +484,9 @@ a.dashed {
 }
 
 @media screen and (max-width: 399px) {
+    #address-issuances tr td:last-child {
+        min-width: 140px;
+    }
     .token-related .blue td {
         font-size: 16px;
     }
