--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -561,6 +561,12 @@ a.dashed {
     white-space: nowrap;
 }
 
+@media screen and (min-width: 640px) {
+    .nav-tabs li a {
+        font-size: 24px !important;
+    }
+}
+
 @media screen and (max-width: 640px) {
     .footer {
         line-height: 12px;
