--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -109,6 +109,7 @@ tr.paginationFooter td ul.pagination {
     padding: 8px 8px 8px 28px;
 }
 
+#address-chainy-tx .table tr:nth-child(even),
 #token-transfers-tab .table tr:nth-child(even),
 #token-issuances-tab .table tr:nth-child(even),
 #token-holders-tab .table tr:nth-child(even),
@@ -116,6 +117,7 @@ tr.even {
     background: #0f0f0f;
 }
 
+#address-chainy-tx .table tr:nth-child(odd),
 #token-transfers-tab .table tr:nth-child(odd),
 #token-issuances-tab .table tr:nth-child(odd),
 #token-holders-tab .table tr:nth-child(odd),
